avoid horizontal scroll

--- a/projects/normalize/src/app/map/about-card/about-card.component.less
+++ b/projects/normalize/src/app/map/about-card/about-card.component.less
@@ -9,6 +9,7 @@
         flex-flow: column;
         align-items: flex-start;
         width: 100%;
+        overflow-x: clip;
       
         .nav {
           .font-source-sans;
